--- a/_posts/2024-07-01-C++_1.자료형.markdown
+++ b/_posts/2024-07-01-C++_1.자료형.markdown
@@ -9,7 +9,7 @@ category: C++
 
 <br>
 
-## - 정수형 자료형
+>## 정수형 자료형
 
 |형식 이름|바이트|값의 범위|
 |---|---|---|
@@ -43,7 +43,7 @@ int main()
 
 <br>
 
-## - 실수형 자료형
+>## 실수형 자료형
 
 |형식 이름|바이트|값의 범위|
 |---|---|---|
