--- a/_posts/2024-07-01-C++_4._조건문과_반복문.markdown
+++ b/_posts/2024-07-01-C++_4._조건문과_반복문.markdown
@@ -4,3 +4,76 @@ title: C++ 4. 조건문과 반복문
 date: 2024-07-02 10:00:00 +0900
 category: C++
 ---
+## 4. 조건문과 반복문
+
+1. [조건문](#조건문)
+    1. [if-else](#1-if-else)
+    2. [switch-case](#2-switch-case)
+        - enum
+2. [반복문](#반복문)
+
+---
+<br><br>
+
+>### 조건문
+
+#### 1. if-else
+
+if-else 조건문은 조건에 따른 분기를 생성한다.
+
+`if (조건문)`, `else if (조건문)`, `else` 의 형태로 쓰이며,  각각 순서대로 조건을 검사하고 참일 경우 해당 분기에 해당하는 코드를 실행한다.
+
+```cpp
+#include <iostream>
+using namespace std;
+
+int main()
+{
+	int var = 33;
+
+	if (50 <= var && var < 100) //값이 50 이상이고 100 미만을 동시에 만족하는 경우
+	{
+		cout << "var은 50 이상이고 100보다 작다";
+	}
+	else if (20 <= var && var < 50) //값이 20 이상이고 50 미만을 동시에 만족하는 경우
+	{
+		cout << "var은 20 이상이고 50보다 작다";
+	}
+	else if (50 <= var && var < 20) //값이 0 이상이고 20 미만을 동시에 만족하는 경우
+	{
+		cout << "var은 0 이상이고 20보다 작다";
+	}
+	else    //위의 조건문을 모두 만족하지 못하는 경우
+	{
+		cout << "var은 음수이다";
+	}
+
+
+	return 0;
+}
+```
+
+
+
+
+
+
+
+#### 2. switch-case
+
+##### - enum
+
+
+
+---
+<br><br>
+
+
+>### 반복문
+
+
+
+
+
+---
+<br><br>
