--- a/_posts/2024-07-04-C++_10._포인터_(2).markdown
+++ b/_posts/2024-07-04-C++_10._포인터_(2).markdown
@@ -11,6 +11,7 @@ category: C++
 2. [포인터 응용](#2-포인터-응용)
     - [포인터의 캐스팅](#포인터의-캐스팅)
     - [함수의 반환과 입력에서의 포인터](#함수의-반환과-입력에서의-포인터)
+    - [함수 포인터](#함수-포인터)
 3. [const 키워드와 포인터](#3-const-키워드와-포인터)
     - [const 키워드](#const-키워드)
     - [volatile 키워드](#volatile-키워드)
@@ -133,6 +134,44 @@ void Solution2(void* _c, void* _d) {
 함수의 입력값에서 함수 내에서 사용될 객체를 포인터로써 받으면 된다.
 
 이 경우 함수에서 해당 객체를 사용할 때 해당 주소를 간접 참조하여 사용하므로 스택 메모리의 공간을 효율적으로 사용하는 데 도움이 된다.
+
+
+<br>
+
+- #### 함수 포인터
+
+함수 또한 포인터를 이용해 입력받을 수 있으며, 이를 이용해 특정 함수를 구현할 때 상황에 따라 다른 함수를 사용하거나 함수를 입력인자로써 받고 싶을 경우 함수 포인터로써 받을 수 있다.
+
+함수 포인터는 `반환타입(포인터 변수 이름)(입력인자 타입)` 의 형태로 선언되며, 아래의 예시와 같이 구현할 수 있다.
+
+<br>
+
+```cpp
+
+void bubblesort(int& _arr) {
+	//...
+}
+
+void selectsort(int& _arr) {
+	//...
+}
+
+void quicksort(int& _arr) {
+	//...
+}
+
+
+void sort(int& _arr, void(*_sortfunc)(int&)) {  // 입력 인자로 배열과 정렬 알고리즘 함수를 받는 정렬함수
+	//...
+}
+
+
+```
+
+<br>
+
+
+
 
 ---
 
