오타 및 목차 수정

--- a/_posts/2024-07-14-C++_17._상속,_다형성.markdown
+++ b/_posts/2024-07-14-C++_17._상속,_다형성.markdown
@@ -7,7 +7,15 @@ category: C++
 
 ## 17. 상속, 다형성
 
-1. 
+1. [1. 클래스 상속](#1-클래스-상속)
+2. [2. 추상 클래스](#2-추상-클래스)
+	- [순수 가상함수](#--순수-가상함수)
+3. [3. 오버라이딩](#3-오버라이딩)
+4. [4. 상속 구조와 포인터](#4-상속-구조와-포인터)
+	- [응용: 클래스 다형성](#--응용-클래스-다형성)
+5. [5. 가상함수](#5-가상함수)
+	- [가상함수의 동작 원리](#--가상함수의-동작-원리)
+	- [가상 소멸자](#--가상-소멸자)
 
 ---
 
@@ -63,7 +71,7 @@ category: C++
 
 추상 클래스는 클래스 내부에 **순수 가상함수**를 선언함으로써 추상 클래스가 되거나, 부모 클래스가 추상 클래스일 경우 부모 클래스로부터 상속 받은 뒤 순수 가상함수를 정의하지 않은 경우 클래스가 추상화되어 추상 클래스로 취급되며 객체 생성이 불가능해 진다.
 
-- #### 순수 가상함수
+#### - 순수 가상함수
 
 순수 가상함수는 가상함수의 종류 중 하나로, 다음과 같이 선언된다:
 
