--- a/_posts/2024-09-07-WinAPI_2._프로젝트_구조.markdown
+++ b/_posts/2024-09-07-WinAPI_2._프로젝트_구조.markdown
@@ -2,18 +2,18 @@
 layout: post
 title: WinAPI 2. 프로젝트 구조
 date: 2024-09-07 18:00:00 +0900
-category: WinAPI & 던파 모작
+category: WinAPI_DNF
 ---
 
 ## 2. 프로젝트 구조
 
-1. [헤더]
-	- [미리 컴파일된 헤더]
-2. [엔진]
-3. [관리자]
-4. [레벨]
-5. [오브젝트]
-6. [컴포넌트]
+1. [헤더](#1-헤더)
+	- [미리 컴파일된 헤더](#--미리-컴파일된-헤더)
+2. [엔진](#2-엔진)
+3. [관리자](#3-관리자)
+4. [레벨](#4-레벨)
+5. [오브젝트](#5-오브젝트)
+6. [컴포넌트](#6-컴포넌트)
 
 ---
 
