--- a/_posts/2024-09-23-WinAPI_3. _이미지_로드.markdown
+++ b/_posts/2024-09-23-WinAPI_3. _이미지_로드.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: WinAPI 3. 이미지 로드
 date: 2024-09-23 12:00:00 +0900
-category: WinAPI & 던파 모작
+category: WinAPI_DNF
 ---
 
 ## 3. 이미지 로드
