--- a/_posts/2024-09-07-WinAPI_2._프로젝트_구조.markdown
+++ b/_posts/2024-09-07-WinAPI_2._프로젝트_구조.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: WinAPI 2. 프로젝트 구조
 date: 2024-09-07 18:00:00 +0900
-category: WinAPI_DNF
+category: WinAPI
 ---
 
 ## 2. 프로젝트 구조
