--- a/_posts/2024-12-31-DirectX_1._그래픽_파이프라인.markdown
+++ b/_posts/2024-12-31-DirectX_1._그래픽_파이프라인.markdown
@@ -7,8 +7,8 @@ category: DirectX
 
 ## 1. 그래픽 파이프라인
 
-1. [그래픽 파이프라인이란?]
-2. [그래픽 파이프라인의 세부 구조]
+1. [그래픽 파이프라인이란?](#1-그래픽-파이프라인이란)
+2. [그래픽 파이프라인의 세부 구조](#2-그래픽-파이프라인의-세부-구조)
 
 ---
 
