--- a/_posts/2024-12-31-DirectX_2._Device_초기화.markdown
+++ b/_posts/2024-12-31-DirectX_2._Device_초기화.markdown
@@ -57,12 +57,13 @@ Swap Chain 에서 백 버퍼를 가져온 후, 해당 백 버퍼를 기반으로
 
 좌표 변환이 끝난 NDC 좌표를 뷰포트 설정에 기반하여 **뷰포트 변환(Viewport Transformation)**을 통해 실제 화면 공간으로 매핑하여 출력한다.
 
+<br>
 
-$ x_{screen} = \frac {(x_{NDC} + 1)} {2} \times viewport_{width} + viewport_x $
+$ \large x_{screen} = \frac {(x_{NDC} + 1)} {2} \times viewport_{width} + viewport_x $
 
-$ y_{screen} = \frac {(1 - y_{NDC})} {2} \times viewport_{height} + viewport_y $
+$ \large y_{screen} = \frac {(1 - y_{NDC})} {2} \times viewport_{height} + viewport_y $
 
-$ z_{screen} = z_NDC \times (max_{depth} - min_{depth}) + min_{depth} $
+$ \large z_{screen} = z_{NDC} \times (max_{depth} - min_{depth}) + min_{depth} $
 
 
 ---
